<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_match"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="10dp"
        tools:listitem="@layout/item_match_vertical" />

    <include
        android:id="@+id/no_data"
        layout="@layout/item_no_data"
        android:visibility="gone" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_match_loading" />

            <include layout="@layout/item_match_loading" />

            <include layout="@layout/item_match_loading" />

            <include layout="@layout/item_match_loading" />

            <include layout="@layout/item_match_loading" />

            <include layout="@layout/item_match_loading" />

            <include layout="@layout/item_match_loading" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>
</FrameLayout>
