<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.SearchActivity">

    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/ic_search_white"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/search_menu_icon"
        android:icon="@drawable/ic_more_vert_white"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:id="@+id/search_match"
                android:title="@string/match" />
            <item
                android:id="@+id/search_team"
                android:title="@string/team" />
        </menu>
    </item>

</menu>
